[fix] Fix navbar alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3520,6 +3520,16 @@ select.minimal:focus {
 				margin: 0;
 			}
 
+			#header.header2020 nav:first-child ul {
+				margin: 0;
+				padding-left: 0;
+			}
+
+			#header.header2020 nav:last-of-type ul {
+				padding-left: 0;
+				padding-right: 2em;
+			}
+
 				#header nav ul li {
 					display: inline-block;
 					margin-left: 1em;
